@@ -5,6 +5,8 @@ python3-support: fixed minor errors in several modules.
 
 python3-support: fixed some syntax errors in several modules.
 
+python3-support: fixed the use of the logger console by the logging module.
+
 ** September 11, 2013 **
 Local branch python3-support has been added.
 
